--- a/src/js/index.html
+++ b/src/js/index.html
@@ -65,7 +65,7 @@
 <div id="myModal" class="modal">
 
   <!-- Modal content -->
-  <div class="modal-content">
+  <div class="modal-content" id="modal-output">
     <span class="close">&times;</span>
     <p>Some text in the Modal..</p>
   </div>
