botoes com valor

--- a/src/js/index.html
+++ b/src/js/index.html
@@ -18,39 +18,39 @@
   <div id="output"></div>
 
   <div class="row">
-    <div class="digit" id="one">1</div>
-    <div class="digit" id="two">2
+    <div class="digit" id="one" value="1">1</div>
+    <div class="digit" id="two" value="2">2
       <div class="sub">ABC</div>
     </div>
-    <div class="digit" id="three">3
+    <div class="digit" id="three" value="3">3
       <div class="sub">DEF</div>
     </div>
   </div>
   <div class="row">
-    <div class="digit" id="four">4
+    <div class="digit" id="four" value="4">4
       <div class="sub">GHI</div>
     </div>
-    <div class="digit" id="five">5
+    <div class="digit" id="five" value="5">5
       <div class="sub">JKL</div>
     </div>
-    <div class="digit">6
+    <div class="digit" value="6">6
       <div class="sub">MNO</div>
     </div>
   </div>
   <div class="row">
-    <div class="digit">7
+    <div class="digit" value="7">7
       <div class="sub">PQRS</div>
     </div>
-    <div class="digit">8
+    <div class="digit" value="8">8
       <div class="sub">TUV</div>
     </div>
-    <div class="digit">9
+    <div class="digit" value="9">9
       <div class="sub">WXYZ</div>
     </div>
   </div>
   <div class="row">
     <div class="digit">*</div>
-    <div class="digit">0</div>
+    <div class="digit" value="0">0</div>
     <div class="digit">#</div>
   </div>
 
