adicionando funcao de logica, ja alterando innerhtml

--- a/src/js/index.html
+++ b/src/js/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+<script src="turing-machine.js"></script>
 
 <div class="container">
 
@@ -54,7 +55,7 @@
     <div class="digit">#</div>
   </div>
 
-  <div class="botrow"><i class="fa fa-star-o dig" aria-hidden="true"></i>
+  <div class="botrow" onclick="turingMachine()"><i class="fa fa-star-o dig" aria-hidden="true"></i>
     <div id="call"><i class="fa fa-phone" aria-hidden="true"></i></div>
     <i class="fa fa-long-arrow-left dig" aria-hidden="true"></i>
   </div>
